feat: Add speed control with scrolling

--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
 			Three.js Scene Graph/Transform Hierarchy
 		</div>
 		<div id="prompt">
-			Drag the mouse to rotate the scene<br>Drag the slider to scale.
+			Drag the mouse to rotate the scene<br>
+			Drag the slider to scale.<br>
+			Scroll to accelerate (changes positions).
 		</div>
 	    <div id="status">
 		    <div id="rotation">rotation: 0,0,0</div>
 		    <div id="scale">scale: 1</div>
+		    <div id="speed">speed: 1</div>
 	    </div>
 	</div>
 	<div id="slider"></div>
